@@ -1,3 +1,9 @@
+2002-01-23  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>
+
+	* structinsp.cc (update): 4k as buf[] size is not enough
+	especially for large messages containing arrays. I have set it to
+	5M !!
+
 2001-11-25  Andras Varga
 
 	* implemented "message subclassing": message inspectors have now a
